--- a/Chatroom_ver1.0/src/css/chat.css
+++ b/Chatroom_ver1.0/src/css/chat.css
@@ -5,32 +5,35 @@ body, html{width:100vw; height:100vh; overflow:hidden;}
 button{ border:none; }
 li{ list-style:none; }
 
+.loader{ position:absolute; top:0; left:0; z-index:1000; display:flex; justify-content:center; align-items:center; width:100vw; height:100vh; background-color:#fff; transition:0.8s;}
+.loader img{ width:30%; }
+
 header{ position:absolute; top:0; left:0; z-index:100; display:flex; justify-content:center; align-items:center; width:100%; height:60px; background-color:#fff; border-bottom:1px solid #ccc; }
 header img{ width:120px; }
 
 .select01{ position:absolute; top:60px; left:0; z-index:50px !important; display:flex; justify-content:center; align-items:center; width:100%; height:100%; background-color:#fff; }
 .select01 .wrap{ display:flex; flex-direction:column; align-items:center; padding-bottom:80px;   }
 .select01 label{ width:100%; text-align:center; }
-#nickname{ width:300px; height:2rem; margin:30px 0 50px; border:1px solid #ccc; }
+#nickname{ width:300px; height:2rem; margin:30px 0 50px; padding-left:0.5rem; box-sizing:border-box; border:1px solid #ccc; }
 #next01{ width:200px; height:2rem; background-color:#B8B8F4; color:#fff; font-size:0.975rem; font-weight:600; }
-/* 
+
 .select02{ position:absolute; top:60px; left:0; width:100%; height:100%; background-color:#fff; }
-.select02 .wrap{ width:100%; height:100%; display:flex; flex-direction:column; justify-content:center; align-items:center; width:100%; padding-bottom:150px;   }
+.select02 .wrap{ width:100%; height:100%; display:flex; flex-direction:column; justify-content:center; align-items:center; padding-bottom:150px; box-sizing:border-box; width:100%; padding-bottom:100px;  }
 .profilePicture{ display:flex; justify-content:center; align-items:center; width:200px; height:200px; margin-bottom:1rem; border-radius:50%; border:1px solid #ccc; overflow:hidden;}
 .myPicture{ width:auto; height:100%; } 
 #selectPicture{ position:absolute; left:-999em; }
 .select02 label{ display:flex; align-items:center; height:2rem; margin:20px 0 40px; padding:0 0.875rem; background-color:#ededed; color:#666; font-size:0.875rem; }
-#next02{ width:200px; height:2rem; background-color:#B8B8F4; color:#fff; font-size:0.975rem; font-weight:600; } */
+#next02{ width:200px; height:2rem; background-color:#B8B8F4; color:#fff; font-size:0.975rem; font-weight:600; }
 
 .chatRoom{ display:flex !important; flex-direction:column; width:100%; height:100vh; padding-top:60px; box-sizing:border-box; }
 
-.displayContainer{ flex:10; }
-.chatList{  height:100%;  }
+.displayContainer{ flex:10; overflow-y:auto; }
+.chatList{ height:100%; }
 .chatList li{ display:flex; align-items:flex-end; padding:1rem; box-sizing:border-box;}
 
 .profile{ display:flex; flex-direction:column; align-items:center; }
-.profile figure{ width:3rem; height:3rem; border-radius:50%; overflow:hidden; }
-.profile img{ width:3rem; }
+.profile figure{ width:3rem; height:3rem; border-radius:50%; border:1px solid #ccc; overflow:hidden; }
+.profile img{ width:auto; height:100%; }
 .profile .user{margin-bottom:4px; font-size:0.875rem; font-weight:600; }
 
 .message { display:flex; align-items:flex-end; }
@@ -43,7 +46,7 @@ header img{ width:120px; }
 
 .inputContainer{flex:2; display:flex; padding:0.5rem; border-top:1px solid #ccc; }
 .away{ position:absolute; left:-999em; }
-#message{ flex:12; margin-right:0.5rem; border:none; }
-#send{ flex:1; background-color:#EBEBFF; }
+#message{ flex:12; margin-right:0.5rem; padding-left:0.5rem; box-sizing:border-box; border:none; }
+#send{ flex:1; background-color:#EBEBFF; border-radius:0.5rem; }
 
 .chatList .inAlert{ padding:0.5rem; justify-content:center; background: rgb(144,228,253); background: radial-gradient(circle, rgba(144,228,253,0.8) 0%, rgba(184,184,244,0.8) 100%); color:#fff; font-weight:600;font-size:1.125rem; }
