--- a/Chatroom_ver1.0/src/css/chat.css
+++ b/Chatroom_ver1.0/src/css/chat.css
@@ -11,7 +11,7 @@ li{ list-style:none; }
 header{ position:absolute; top:0; left:0; z-index:100; display:flex; justify-content:center; align-items:center; width:100%; height:60px; background-color:#fff; border-bottom:1px solid #ccc; }
 header img{ width:120px; }
 
-.select01{ position:absolute; top:60px; left:0; z-index:50px !important; display:flex; justify-content:center; align-items:center; width:100%; height:100%; background-color:#fff; }
+.select01{ position:absolute; top:60px; left:0; z-index:50 !important; display:flex; justify-content:center; align-items:center; width:100%; height:100%; background-color:#fff; }
 .select01 .wrap{ display:flex; flex-direction:column; align-items:center; padding-bottom:80px;   }
 .select01 label{ width:100%; text-align:center; }
 #nickname{ width:300px; height:2rem; margin:30px 0 50px; padding-left:0.5rem; box-sizing:border-box; border:1px solid #ccc; }
